# SimpleAmqpClient

./: .clang-format  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md
src/: AmqpException.cpp  AmqpResponseLibraryException.cpp  BasicMessage.cpp  Channel.cpp  ChannelImpl.cpp  Envelope.cpp  MessageReturnedException.cpp  Table.cpp  TableImpl.cpp
src/SimpleAmqpClient/: AmqpException.h  AmqpLibraryException.h  AmqpResponseLibraryException.h  BasicMessage.h  Channel.h  ChannelImpl.h  ConnectionClosedException.h  ConsumerCancelledException.h  ConsumerTagNotFoundException.h  Envelope.h  MessageRejectedException.h  MessageReturnedException.h  Table.h  TableImpl.h  Util.h  Version.h
testing/: CMakeLists.txt  test_message.cpp
